--- a/Cache_Simulation/Cache_Simulation.csproj
+++ b/Cache_Simulation/Cache_Simulation.csproj
@@ -46,6 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="block.cs" />
+    <Compile Include="cache.cs" />
+    <Compile Include="dL1Cache.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dL1Cache.Designer.cs">
+      <DependentUpon>dL1Cache.cs</DependentUpon>
+    </Compile>
     <Compile Include="iTLB.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +68,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="dl1cache.resx">
+      <DependentUpon>dL1Cache.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="iTLB.resx">
       <DependentUpon>iTLB.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +99,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
