--- a/Cache_Simulation/Cache_Simulation.csproj
+++ b/Cache_Simulation/Cache_Simulation.csproj
@@ -72,6 +72,7 @@
     <Compile Include="L2Cache.Designer.cs">
       <DependentUpon>L2Cache.cs</DependentUpon>
     </Compile>
+    <Compile Include="pte.cs" />
     <Compile Include="Simulator.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +81,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tlb.cs" />
     <EmbeddedResource Include="dl1cache.resx">
       <DependentUpon>dL1Cache.cs</DependentUpon>
     </EmbeddedResource>
