--- a/Cache_Simulation/Cache_Simulation.csproj
+++ b/Cache_Simulation/Cache_Simulation.csproj
@@ -49,6 +49,12 @@
     <Compile Include="block.cs" />
     <Compile Include="cache.cs" />
     <Compile Include="CPU.cs" />
+    <Compile Include="CPU_Frm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CPU_Frm.Designer.cs">
+      <DependentUpon>CPU_Frm.cs</DependentUpon>
+    </Compile>
     <Compile Include="dL1Cache.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +91,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tlb.cs" />
+    <EmbeddedResource Include="CPU_Frm.resx">
+      <DependentUpon>CPU_Frm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dl1cache.resx">
       <DependentUpon>dL1Cache.cs</DependentUpon>
     </EmbeddedResource>
