--- a/Cache_Simulation/Cache_Simulation.csproj
+++ b/Cache_Simulation/Cache_Simulation.csproj
@@ -127,6 +127,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="STAT_FRM.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="STAT_FRM.Designer.cs">
+      <DependentUpon>STAT_FRM.cs</DependentUpon>
+    </Compile>
     <Compile Include="tlb.cs" />
     <Compile Include="TLB_FRM.cs">
       <SubType>Form</SubType>
@@ -185,6 +191,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="STAT_FRM.resx">
+      <DependentUpon>STAT_FRM.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TLB_FRM.resx">
       <DependentUpon>TLB_FRM.cs</DependentUpon>
     </EmbeddedResource>
